--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -1,1 +1,41 @@
-Hello :)
+<h2>
+  Search by title:
+</h2>
+
+<%= form_tag '/api', :method => :get do %>
+  <p>
+    <%= label_tag :t, "Title" %>
+    <%= text_field_tag :t, '' %>
+  </p>
+  <p>
+    Backend:
+    <%= radio_button_tag :b, :imdb, true %>
+    <%= label_tag :b_imdb, 'IMDB' %>
+    <%= radio_button_tag :b, :tvdb %>
+    <%= label_tag :b_tvdb, 'TVDB' %>
+  </p>
+  <p>
+    <%= submit_tag 'Search' %>
+  </p>
+<% end %>
+
+<h2>
+  Search by id:
+</h2>
+
+<%= form_tag '/api', :method => :get do %>
+  <p>
+    <%= label_tag :id, "ID" %>
+    <%= text_field_tag :id, '' %>
+  </p>
+  <p>
+    Backend:
+    <%= radio_button_tag :b, :imdb, true %>
+    <%= label_tag :b_imdb, 'IMDB' %>
+    <%= radio_button_tag :b, :tvdb %>
+    <%= label_tag :b_tvdb, 'TVDB' %>
+  </p>
+  <p>
+    <%= submit_tag 'Search' %>
+  </p>
+<% end %>
